--- a/{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/.github/workflows/linters.yaml
+++ b/{{cookiecutter.project_name|lower|replace('-', '_')|replace(' ', '_')}}/.github/workflows/linters.yaml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/cache@v3
         id: cached-poetry
         with:
-          key: cached-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: {% raw %}cached-poetry-${{ hashFiles('**/poetry.lock') }}{% endraw %}
           path: .venv
 
       - name: Install dependencies
@@ -66,7 +66,7 @@ jobs:
         uses: actions/cache@v3
         id: cached-poetry
         with:
-          key: cached-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: {% raw %}cached-poetry-${{ hashFiles('**/poetry.lock') }}{% endraw %}
           path: .venv
 
       - name: Install dependencies
